Add new-meal tag to list component html file

--- a/app/meal-list.component.html
+++ b/app/meal-list.component.html
@@ -5,3 +5,5 @@
 </meal-display>
 <edit-meal-details [meal]="selectedMeal">
 </edit-meal-details>
+
+<new-meal (onSubmitNewMeal)="createdMeal($event)"></new-meal>
