--- a/app/edit-meal-details.component.html
+++ b/app/edit-meal-details.component.html
@@ -1,10 +1,10 @@
 <hr>
 
-  <h3>Edit Meal Name: </h3>
+  <h3>Edit Name: </h3>
     <input [(ngModel)]="meal.name" class="meal-form"/>
 
-  <h3>Edit Meal Description: </h3>
+  <h3>Edit Description: </h3>
     <input [(ngModel)]="meal.description" class="meal-form"/>
 
-  <h3>Edit Meal Calories: </h3>
+  <h3>Edit Calories: </h3>
     <input [(ngModel)]="meal.calories" class="meal-form"/>
