--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,14 @@
 <div class="container">
-  <h1>Calorie Track</h1>
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="resources/images/runner.png" alt="runner" class="logo">
+      </div>
+      <div class="col-md-8">
+        Calorie Track
+      </div>
+    </div>
+  </div>
 
   <meal-list
     [mealList]="meals"
