--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -2,10 +2,18 @@ body {
   background-color: #3498db;
 }
 
-h1 {
-  color: fff;
+.jumbotron {
+  background-color: rgba(52, 73, 94, 0.2);
+  border: 3px solid #fff;
+  margin-top: 5%;
+  color: #fff;
+  font-size: 100px;
+}
+
+.jumbotron h1 {
+  font-size: 60px;
 }
 
 .selected {
-  color: #bdc3c7;
+  color: #bdc3c7
 }
