--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="jumbotron">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <img src="resources/images/runner.png" alt="runner" class="logo">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-9 textAndHeart">
         Calorie Track
+        <img src="resources/images/tabIcon.png" alt="apple heart" class="appleHeart">
       </div>
     </div>
   </div>
