Move navbar and jumbotron outside of container class.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -10,9 +10,8 @@
 </a>
 </div>
 
-<div class="container">
 <div class="jumbotron">
-  <div class="row">
+  <div class="jumbotron-row row">
     <div class="col-md-3">
       <img src="resources/images/runner.png" alt="runner" class="logo">
     </div>
@@ -22,6 +21,7 @@
     </div>
   </div>
 </div>
+<div class="container">
 
 <meal-list
   [mealList]="meals"
