add content and style changes. Add Pandora and Spotify links.

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -16,10 +16,22 @@
       <img src="resources/images/runner.png" alt="runner" class="logo">
     </div>
     <div class="col-md-9 textAndHeart">
-      Calorie Track
-      <img src="resources/images/tabIcon.png" alt="apple heart" class="appleHeart">
+      <p class="title">Calorie Tracker
+      <img src="resources/images/tabIcon.png" alt="apple heart" class="appleHeart"></p>
+      <div class="description"><span class="first-sentence">Welcome to Calorie Tracker!</span> Here, you can enter the meals you've eaten over the course of the day. Give them a brief description, and a calorie count. Use this app on the way to a leaner, healthier you!</div>
     </div>
   </div>
+
+  <div class="audio">
+    Get fit with dieting, exercise, and THESE awesome workout playlists!
+      <a href="http://www.pandora.com/music/workout">
+        <img src="resources/images/pandoraIcon.png">
+      </a>
+      <a href="http://tinyurl.com/h3c2rnp">
+        <img src="resources/images/spotifyIcon.png">
+      </a>
+  </div>
+
 </div>
 <div class="container">
 
