--- a/app/meal-list.component.html
+++ b/app/meal-list.component.html
@@ -1,13 +1,7 @@
-<br>
 <h3>Today's Meals</h3>
-  <meal-display *ngFor="#currentMeal of mealList | calorie:filterCalorie"
-   (click)="mealClicked(currentMeal)"
-   [class.selected]="currentMeal === selectedMeal"
-   [meal] = "currentMeal">
-  </meal-display>
-
 <div class="row">
   <div class="form-group col-sm-3">
+    <p>Sort Meals by Calories</p>
     <select class="form-control calories"(change)="onCalorie($event.target.value)">
       <option value="all" selected="selected">Show All</option>
       <option value="low">Show Meals < 300 Calories</option>
@@ -15,6 +9,15 @@
     </select>
   </div>
 </div>
+  <ul>
+    <meal-display *ngFor="#currentMeal of mealList | calorie:filterCalorie"
+     (click)="mealClicked(currentMeal)"
+     [class.selected]="currentMeal === selectedMeal"
+     [meal] = "currentMeal">
+    </meal-display>
+  </ul>
+  <p>Click on a meal you've added to edit its details!</p>
+
 
   <edit-meal-details *ngIf="selectedMeal" [meal]="selectedMeal">
   </edit-meal-details>
