--- a/app/meal.component.html
+++ b/app/meal.component.html
@@ -1,1 +1,4 @@
-<h3>{{ meal.name }}</h3> <h4>{{ meal.description }} -- {{ meal.calories }} calories</h4>
+<li>
+  <h3 class="mealName">{{ meal.name }}</h3>
+  <h4>Details: {{ meal.description }} -- {{ meal.calories }} calories</h4>
+</li>
