--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -1,10 +1,10 @@
 body {
-
   background: #3498db; /* Old browsers */
   background: -moz-linear-gradient(top,  #3498db 0%, #2989d8 28%, #7db4d8 82%, #e5e5e5 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top,  #3498db 0%,#2989d8 28%,#7db4d8 82%,#e5e5e5 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to bottom,  #3498db 0%,#2989d8 28%,#7db4d8 82%,#e5e5e5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3498db', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+
 }
 
 .navbar {
@@ -24,12 +24,18 @@ body {
 }
 
 .jumbotron {
-  background-color: rgba(52, 73, 94, 0.2);
+  background-color: rgba(52, 73, 94, 0.3);
   border-top: 3px solid #fff;
   border-bottom: 3px solid #fff;
   color: #fff;
-  font-size: 100px;
   margin-top: -20px;
+}
+
+.jumbotron p {
+  font-family: 'Permanent Marker', cursive;
+  font-size: 5em;
+  border-bottom: 2px solid #fff;
+  letter-spacing: 5px;
 }
 
 .jumbotron-row {
@@ -43,10 +49,50 @@ body {
   margin-top: -3%;
 }
 
-.textAndHeart {
-  border-bottom: 2px solid #fff;
+.first-sentence {
+  text-shadow: 0 0 10px #2ff;
+  font-style: oblique;
+  font-size: 28px;
+}
+
+.description {
+  float: right;
+  font-size: 20px;
+}
+
+.audio {
+  font-family: monospace, cursive;
+  float: right;
+  margin-right: 6%;
+  background-color: rgba(44, 62, 80, 0.8);
+  border: 2px solid rgba(44, 62, 80, 0.9);
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.audio img {
+  height: 25px;
+  width: 25px;
 }
 
 .selected {
   color: #bdc3c7;
+}
+
+.mealName {
+  font-weight: bolder;
+}
+
+footer {
+  margin-left: 5px;
+  margin-top: 40%;
+  margin-right: 5px;
+}
+
+footer img{
+  position: relative;
+  float: right;
+  width: 25px;
+  height: 25px;
+  margin-bottom: 10px;
 }
